Bug 1896632 - Manually define PKEY_Link_Arguments in JumpListBuilder for MINGW32 builds. r=yjuglaret,win-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D210315